--- a/Notebooks/HTML basics.ipynb
+++ b/Notebooks/HTML basics.ipynb
@@ -84,7 +84,7 @@
     "### HTML elements attributes\n",
     "\n",
     "Attributes are given to html elements to specify some property of the element.  \n",
-    "They are defined in this way: `<element attribute=\"value\"></element>`  \n",
+    "They are defined in this way: `<element attribute=\"value\" attribute2=\"value\"></element>`  \n",
     "\n",
     "For example, the link tag `<a>` needs to receive the url he should link to:  \n",
     "`<a href=\"www.google.com\"></a>` will redirect to `www.google.com`.  \n",
